# HTTPServer

./: .gitignore  Makefile  Readme.md  codeline_stat.sh  main.cpp  readmd.md  start.sh  transmission-platform
agent/: agent_core.py  requirements.txt
base/: CMakeLists.txt
base/inc/: connection.h  heartbeat.h  protocol.h  protocol_handler.h  threadpool.h  utils.h
base/src/: connection.cpp  heartbeat.cpp  protocol_handler.cpp  utils.cpp  utils.cpp.bak
client/: CMakeLists.txt  Makefile  main.cpp  readme.md
client/configs/: config.json
client/inc/: ClientApp.h  alarmInfo.h  clientmodelupgrade.h  config.h  heartbeat.h  receive.h  sendfile.h  utils.h
client/scripts/: exposure_update_model.sh  get_local_ip.sh  semantic_update_model.sh  test.sh  update_model.sh
client/src/: ClientApp.cpp  alarminfo.cpp  clientmodelupgrade.cpp  config.cpp  connection.cpp  heartbeat.cpp  main.cpp  receive.cpp  sendfile.cpp  utils.cpp
config/nginx/: transmission-platform
inc/: connection.h  heartbeat.h  recvfile.h  utils.h
server/: CMakeLists.txt  Makefile
server/agent/: main.py
server/agent/tools/: system_tools.py
server/config/nginx/: transmission-platform
server/inc/: EventLoop.h  ServerApp.h  modelupgrade.h  recvfile.h  sendfile.h  utils.h
server/src/: ServerApp.cpp  http_server.cpp  main.cpp  modelupgrade.cpp  recvfile.cpp  sendfile.cpp  utils.cpp
src/: connection.cpp  heartbeat.cpp  http_server.cpp  modelupgrade.cpp  recvfile.cpp  sendfile.cpp  utils.cpp
tests/: CMakeLists.txt  test_http.cpp  test_integration_transfer.cpp  test_perf.cpp  test_protocol.cpp
tests/configs/: TestJson.json  config.json
tools/: Makefile  Makefile_server  codeline.sh  microservice.md  modify.md  todo.md
